init donut chart vis

--- a/progress.html
+++ b/progress.html
@@ -1,13 +1,19 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
   <title>Progress Visualization Prototype Demo</title>
   <link rel="stylesheet" href="progress.css">
+  <script src="http://d3js.org/d3.v3.min.js"></script>
 </head>
+
 <body>
   <header>
     <nav class='main-nav'>
-      <span class="logo"><img src="https://d37djvu3ytnwxt.cloudfront.net/static/images/logo-edX-77x36.png" alt="edX" title="edX" itemprop="url" height="30" width="64"></span>
+      <span class="logo">
+        <img src="https://d37djvu3ytnwxt.cloudfront.net/static/images/logo-edX-77x36.png" alt="edX" title="edX" itemprop="url" height="30" width="64">
+      </span>
       <span class="provider">MITx:</span>
       <span class="course">0.000x EDX Data Visualization</span>
     </nav>
@@ -15,20 +21,25 @@
   <div class="content">
     <div class="card">
       <h2 class="card-header">Progress</h2>
-      <div class="card-content">
+      <div class="card-content" id="progress">
 
-        <label for="selectgoal">Your Goal: </label>
-        <select name="goal" id="selectgoal">
-          <option value="certificate" selected>Get a certificate</option>
-          <option value="allvideos">Watch all videos</option>
-        </select>
-        <label for="selectcomparewith">Compare Yourself With: </label>
-        <select name="comparewith" id="selectcomparewith">
-          <option value="none">Nobody</option>
-          <option value="allpeers" selected>All peers</option>
-          <option value="toppeers">Top students</option>
-        </select>
-        
+        <div class="chart-options">
+          <label for="selectgoal">Your Goal: </label>
+          <select name="goal">
+            <option value="certificate" selected>Get a certificate</option>
+            <option value="allvideos">Watch all videos</option>
+          </select>
+        </div>
+        <div class="chart-options">
+          <label for="selectcomparewith">Compare Yourself With: </label>
+          <select name="comparewith">
+            <option value="none">Nobody</option>
+            <option value="allpeers" selected>All peers</option>
+            <option value="toppeers">Top students</option>
+          </select>
+        </div>
+
+        <script src="progress-donut-chart.js"></script>
       </div>
     </div>
     <div class="card">
@@ -37,4 +48,5 @@
     </div>
   </div>
 </body>
+
 </html>
