load data using d3.json; new partially fake data
- change html name for simplehttpserver

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>EdX Learning Dashboard Challenge Prototype Demo</title>
-  <link rel="stylesheet" href="progress.css">
+  <link rel="stylesheet" href="index.css">
   <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="load-data.js"></script>
 </head>
 
 <body>
