chart options for peer type
- user now can choose which peer group to compare with
- `csv2json.py` generate top10 students data, ready for leaderboard

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             <option value="video" selected>video</option>
             <option value="problem">problem</option>
           </select>
-          <label for="student">progress for student </label>
+          <label for="student">progress for </label>
           <select name="student" id="select-student"></select>
+          <label for="peers">, comparing with </label>
+          <select name="peers" id="select-peer"></select>
         </div>
       </div>
     </div>
