--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="chart-options">
           <label for="category">Show </label>
           <select name="category" id="select-category">
-            <option value="video" selected>video</option>
-            <option value="problem">problem</option>
+            <option value="problem" selected>problem</option>
+            <option value="video">video</option>
           </select>
           <label for="student">progress for </label>
           <select name="student" id="select-student"></select>
@@ -37,10 +37,21 @@
     </div>
     <div class="card">
       <h2 class="card-header">Leaderboard</h2>
-      <div class="card-content"></div>
+      <div class="card-content" id="leaderboard">
+        <div class="chart-options">
+          <label for="top10">Show </label>
+          <select name="top10" id="select-top10">
+            <option value="top10_problem" selected>top10_problem</option>
+            <option value="top10_video">top10_video</option>
+            <option value="top10_active">top10_active</option>
+            <option value="top10_timespent">top10_timespent</option>
+          </select>
+        </div>
+      </div>
     </div>
   </div>
   <script src="progress-donut-chart.js"></script>
+  <script src="leaderboard-bar-chart.js"></script>
 </body>
 
 </html>
