--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 
 <body>
   <header>
-    <nav class='main-nav'>
-      <span class="logo">
+    <nav class='nav'>
+      <span class="nav-logo">
         <img src="https://d37djvu3ytnwxt.cloudfront.net/static/images/logo-edX-77x36.png" alt="edX" title="edX" itemprop="url" height="30" width="64">
       </span>
-      <span class="provider">MITx:</span>
-      <span class="course">0.000x EdX Learning Dashboard Challenge</span>
+      <span class="nav-provider">MITx:</span>
+      <span class="nav-text">0.000x </span>
+      <span class="nav-text nav-hide-on-small">EdX Learning Dashboard Challenge</span>
+      <span class="nav-text nav-float-right">
+        <select name="student" id="select-student"></select>
+      </span>
     </nav>
   </header>
   <div class="content">
@@ -29,9 +33,7 @@
               <option value="problem" selected>problem</option>
               <option value="video">video</option>
             </select>
-            <label for="student"> progress for</label>
-            <select name="student" id="select-student"></select>
-            <label for="peers"> compared to</label>
+            <label for="peers"> progress compared to</label>
             <select name="peers" id="select-peer"></select>
           </div>
         </div>
