timeline chart with fake data

--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
     </div>
     <div id="rcol">
       <div class="card">
+        <h2 class="card-header">Timeline</h2>
+        <div class="card-content" id="timeline">
+          <div class="chart-options">
+            <label for="timelinetype">Show</label>
+            <select name="timelinetype" id="select-timelinetype">
+              <option value="accumulated" selected>accumulated</option>
+              <option value="perday">perday</option>
+            </select>
+            <span>progress</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
         <h2 class="card-header">Leaderboard</h2>
         <div class="card-content" id="leaderboard">
           <div class="chart-options">
@@ -53,6 +66,7 @@
     </div>
   </div>
   <script src="progress-donut-chart.js"></script>
+  <script src="timeline-line-chart.js"></script>
   <script src="leaderboard-bar-chart.js"></script>
 </body>
 
