global/separate student-selectbox
use hardcoded student_ids to ensure that student-selectbox is always
loaded before visualizations

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <span class="nav-text nav-hide-on-small">EdX Learning Dashboard Challenge</span>
       <span class="nav-text nav-float-right">
         <select name="student" id="select-student"></select>
+        <script src="student-selectbox.js"></script>
       </span>
     </nav>
   </header>
