make it look like native edx course page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       </span>
     </nav>
   </header>
+  <nav class="nav-course">
+    <span>Courseware</span>
+    <span class="tab-active">Progress</span>
+  </nav>
   <div class="content">
     <div id="lcol">
       <div class="card">
