update edx logo url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <nav class='nav'>
       <span class="nav-logo">
-        <img src="https://d37djvu3ytnwxt.cloudfront.net/static/images/logo-edX-77x36.png" alt="edX" title="edX" itemprop="url" height="30" width="64">
+        <img src="https://www.edx.org/sites/default/files/theme/edx-logo-header.png" alt="edX" title="edX" itemprop="url" height="30" width="64">
       </span>
       <span class="nav-provider">MITx:</span>
       <span class="nav-text">0.000x </span>
